add client parameter to long polling to avoid missed changes
